--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,16 @@ version = "0.1.0"
 authors = ["Matthew Brookes <brookesm@student.ethz.ch>"]
 edition = "2018"
 
+[dependencies.faster-rs]
+git = "https://github.com/matthewbrookes/faster-rs"
+branch="deletion-logscan"
+
 [dependencies]
 bincode = "1.2.0"
 abomonation = "^0.7"
 abomonation_derive = "0.3"
 clap = "*"
 env_logger = "*"
-faster-rs = "0.9"
 hdrhist = "0.5.0"
 log = "*"
 rand = "0.6"
