--- a/rocksdbmerge.config
+++ b/rocksdbmerge.config
@@ -10,3 +10,6 @@ lrusize = 268435456
 # 32GB x 2
 writebuffersize = 34359738368
 
+# Hash block index size (in bytes)
+# 100MB
+hashindexsize = 102400000
